--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="theme-color" content="#ffffff">
   <title>Pomodoro Clock</title>
   <link rel="stylesheet" href="./assets/css/reset.css">
+  <link rel="manifest" href="./manifest.webmanifest">
+  <link rel="apple-touch-icon" href="./assets/icons/pomodoro128.png">
 </head>
 <body>
   <div id="root"></div>  
